Fixed Button Issue
TopNav was set to 0 width, so button didn't line up with the visual indication

--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,11 @@ body {
 	display: inline-block;
 }
 
+.topNav {
+	width: 100%;
+	height: 50px;
+}
+
 
 .topNav .left .button {
 	float: left;
